# s14-23-m-python

./: README.md  package-lock.json
backend/: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
backend/apps/category/: urls.py  views.py
backend/apps/category/migrations/: 0001_initial.py
backend/apps/login/: apps.py  urls.py  views.py
backend/apps/orders/: models.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py  0002_initial.py  0002_rename_product_id_order_product_and_more.py
backend/apps/payment_type/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
backend/apps/payment_type/migrations/: 0001_initial.py
backend/apps/products/: models.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py  0002_alter_product_images_url.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_customuser_address_alter_customuser_lastname_and_more.py
backend/backend/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  copiaAPPS-JSX.txt  index.css  main.jsx
frontend/src/Routes/: Rutas.jsx
frontend/src/components/Caracteristicas/: Caracteristicas.jsx  caracteristicas.css  tarjetasCaracteristicas.jsx
frontend/src/components/Carrusel/: Carrusel.jsx  (+1 more)
frontend/src/context/: UserContext.jsx
frontend/src/hooks/: useUser.jsx
frontend/src/pages/: Catalog.jsx  PlantDetail.jsx
frontend/src/styles/: catalogStyles.css  plantDetailStyles.css
(+42 files in other folders)
