[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Crispthofer A. Rincon M. <alex877@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.1"
pre-commit = "^3.7.0"
black = "^24.3.0"
django-cors-headers = "^4.3.1"
django-model-utils = "^4.5.0"
drf-yasg = "^1.21.7"
django = "^5.0.4"
pytest = "^8.1.1"
djangorestframework-simplejwt = "^5.3.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
